# accounting

./: .dockerignore  .env.example  .gitignore  AccCloud_ProjectDoc.docx  Dockerfile  FEATURES.md  Makefile  README.md  alembic.ini  docker-compose.yml  migrate_payment_mode.py  pyproject.toml  railway.toml  requirements.txt
.claude/: launch.json
app/: config.py  context.py  database.py  main.py
app/api/: deps.py  responses.py
app/core/: adjusting_service.py  editor.py  engine.py  journals.py  ledger.py  models.py  period_service.py  recurring_service.py
app/master/: balance_tracker_service.py  contact_service.py  employee_service.py  models.py  schemas.py
app/ocr/: __init__.py  bank_reader.py  classifier.py  extractor.py  models.py  reader.py  schemas.py
app/platform/: auth.py  branch_service.py  coa_template.py  company_service.py  deadline_tracker_service.py  firm_service.py  models.py  user_service.py
app/reports/: __init__.py  _base.py  _queries.py  aging.py  balance_sheet.py  budget_actual.py  cashflow.py  consolidation.py  cost_center.py  equity_changes.py  income_statement.py  notes.py  tax_report.py  trial_balance.py  working_paper.py
app/shared/: models.py
app/ui/: deps.py  routes.py
migrations/: env.py
migrations/versions/: 007_ocr.py  (+16 more)
nginx/: nginx.conf
scripts/: backup.sh  check_db.py  check_tables.py  gen_project_doc.py  init_db.sh  migrate_company_db.py  restore.sh  seed_bank_accounts.py  seed_coa_contacts.py  seed_dev.py  seed_fixed_assets.py  seed_inventory.py  startup.sh
templates/: base.html  dashboard.html  firm_dashboard.html
(+116 files in other folders)
